--- a/apm/k8s/python/dockerfile-splk-otel-python
+++ b/apm/k8s/python/dockerfile-splk-otel-python
@@ -1,12 +1,11 @@
 FROM python:slim
-RUN apt-get update && \ 
-    apt install -y python3-pip && \
-    python3 -m pip install pip==21.0.1 && \
-    python3 -m pip install -r requirements.txt && \
-    apt -y autoremove && apt-get -y autoclean && \
-    export PATH="$HOME/.local/bin:$PATH" && \
-    splk-py-trace-bootstrap && \
-    mkdir /home/code
-EXPOSE 5000
+RUN mkdir /home/code
 WORKDIR /home/code
 COPY . /home/code/
+RUN apt-get update && \
+    export PATH="$HOME/.local/bin:$PATH" && \
+    apt install -y python3-pip && \
+    python3 -m pip install -r requirements.txt && \
+    splk-py-trace-bootstrap && \
+    apt -y autoremove && apt-get -y autoclean
+EXPOSE 5000
