--- a/apm/k8s/python/tools/autogen/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/autogen/dockerfile-splk-otel-python-autogen
@@ -1,21 +1,18 @@
 FROM python:slim
+RUN mkdir /home/code
+WORKDIR /home/code
+COPY . /home/code/
+COPY redis.conf /etc/redis
 RUN apt-get update && \
     apt install -y redis-server && \
     apt install -y ntp && \
-    apt install -y python3-pip && \
-    python3 -m pip install pip==21.0.1 && \
-    python3 -m pip install splunk-opentelemetry && \
-    python3 -m pip install opentelemetry-api && \
-    python3 -m pip install opentelemetry-instrumentation-redis && \
-    python3 -m pip install redis && \
-    apt -y autoremove && apt-get -y autoclean && \
     export PATH="$HOME/.local/bin:$PATH" && \
+    apt install -y python3-pip && \
+    python3 -m pip install -r requirements.txt && \
     splk-py-trace-bootstrap && \
-    mkdir /home/code
-WORKDIR /home/code
+    apt -y autoremove && apt-get -y autoclean
 EXPOSE 6379
-COPY redis.conf /etc/redis
-COPY . /home/code/
+
 #   apt install -y procps && \
 #   apt install -y net-tools && \
 #   apt install -y curl && \
