--- a/apm/k8s/java/manual-inst/java-reqs-manual-inst.yaml
+++ b/apm/k8s/java/manual-inst/java-reqs-manual-inst.yaml
@@ -18,8 +18,6 @@ spec:
             - name: http
               containerPort: 3000
           env:
-          - name: OTEL_RESOURCE_ATTRIBUTES
-            value: service.name=java-otel-man-inst
           - name: SPLUNK_OTEL_AGENT
             valueFrom:
               fieldRef:
@@ -27,7 +25,7 @@ spec:
           - name: OTEL_EXPORTER_JAEGER_ENDPOINT
             value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
           - name: OTEL_RESOURCE_ATTRIBUTES
-            value: deployment.environment=apm-workshop
+            value: service.name=java-otel-manual-inst,deployment.environment:apm-workshop
           command: ["/bin/sh"]
           args: ["./manual-inst/run-java-manual-inst-k8s.sh"]
 ---
