--- a/apm/k8s/java/manual-inst/java-reqs-manual-inst.yaml
+++ b/apm/k8s/java/manual-inst/java-reqs-manual-inst.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
   name: java-manual-inst-k8s
 spec:
@@ -28,15 +28,3 @@ spec:
             value: service.name=java-otel-manual-inst,deployment.environment:apm-workshop
           command: ["/bin/sh"]
           args: ["./manual-inst/run-java-manual-inst-k8s.sh"]
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: java-manual-inst-k8s
-spec:
-  selector:
-    name: java-manual-inst-k8s
-  ports:
-  - protocol: TCP
-    port: 3000
-    targetPort: 3000
