--- a/apm/k8s/collectorconfig/spanprocessor.yaml
+++ b/apm/k8s/collectorconfig/spanprocessor.yaml
@@ -7,7 +7,7 @@ otelAgent:
     processors:
       attributes/update:
         actions:
-          - key: user.id
+          - key: my.key
             value: redacted
             action: update
     service:
