--- a/apm/k8s/k3slogs.yaml
+++ b/apm/k8s/k3slogs.yaml
@@ -1,9 +1,9 @@
-clusterName: SL-cluster
-splunkRealm: us1        
-splunkAccessToken: F9D-tA0fv4_2a4PD7Zn0UQ
+clusterName: YOURCLUSTERHERE
+splunkRealm: YOURREALMHERE        
+splunkAccessToken: YOURTOKENHERE
 
 fluentd:
   config:
     containers:
       logFormatType: cri
-      criTimeFormat: "%Y-%m-%dT%H:%M:%S.%Nz"
+      criTimeFormat: "%Y-%m-%dT%H:%M:%S.%NZ"
