--- a/apm/k8s/python/tools/autogen/py-autogen-ext.yaml
+++ b/apm/k8s/python/tools/autogen/py-autogen-ext.yaml
@@ -23,6 +23,7 @@ spec:
           fieldPath: status.hostIP
     - name: OTEL_EXPORTER_JAEGER_ENDPOINT
       value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
+    command: ["/bin/sh"]
     args: ["run-autogen-ext.sh"]
 ---
 apiVersion: v1
