--- a/apm/k8s/java-deployment.yaml
+++ b/apm/k8s/java-deployment.yaml
@@ -13,6 +13,8 @@ spec:
           fieldPath: status.hostIP
     - name: OTEL_EXPORTER_JAEGER_ENDPOINT
       value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
+    - name: SPLUNK_METRICS_ENDPOINT
+      value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
     - name: OTEL_RESOURCE_ATTRIBUTES
       value: 'service.name=client-java-otel-k8s,deployment.environment=apm-workshop'
     command: ["/bin/sh"]
