--- a/apm/k8s/py-deployment.yaml
+++ b/apm/k8s/py-deployment.yaml
@@ -28,6 +28,12 @@ spec:
               fieldPath: status.hostIP
         - name: OTEL_EXPORTER_JAEGER_ENDPOINT
           value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
+        - name: OTEL_TRACES_EXPORTER
+          value: jaeger-thrift-splunk
+        - name: OTEL_PROPAGATORS
+          value: b3multi
+ #      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+ #        value: http://$(SPLUNK_OTEL_AGENT):4317
         - name: OTEL_RESOURCE_ATTRIBUTES
           value: deployment.environment=apm-workshop
         command: ["/bin/sh"]
@@ -62,6 +68,12 @@ spec:
           fieldPath: status.hostIP
     - name: OTEL_EXPORTER_JAEGER_ENDPOINT
       value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
+    - name: OTEL_TRACES_EXPORTER
+      value: jaeger-thrift-splunk
+    - name: OTEL_PROPAGATORS
+      value: b3multi
+#   - name: OTEL_EXPORTER_OTLP_ENDPOINT
+#     value: http://$(SPLUNK_OTEL_AGENT):4317
     - name: OTEL_RESOURCE_ATTRIBUTES
       value: deployment.environment=apm-workshop
     - name: OTEL_SERVICE_NAME
