--- a/apm/k8s/py-deployment.yaml
+++ b/apm/k8s/py-deployment.yaml
@@ -20,22 +20,16 @@ spec:
           - name: http
             containerPort: 5000
         env:
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: deployment.environment=apm-workshop
         - name: OTEL_SERVICE_NAME
           value: server-flask-otel-k8s
         - name: SPLUNK_OTEL_AGENT
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
-        - name: OTEL_EXPORTER_JAEGER_ENDPOINT
-          value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
-        - name: OTEL_TRACES_EXPORTER
-          value: jaeger-thrift-splunk
-        - name: OTEL_PROPAGATORS
-          value: b3multi
- #      - name: OTEL_EXPORTER_OTLP_ENDPOINT
- #        value: http://$(SPLUNK_OTEL_AGENT):4317
-        - name: OTEL_RESOURCE_ATTRIBUTES
-          value: deployment.environment=apm-workshop
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://$(SPLUNK_OTEL_AGENT):4317
         command: ["/bin/sh"]
         args: ["run-server.sh"]
 ---
@@ -62,21 +56,21 @@ spec:
   - name: client-py-otel-k8s
     image: docker.io/stevelsplunk/splk-python
     env:
-    - name: SPLUNK_OTEL_AGENT
-      valueFrom:
-        fieldRef:
-          fieldPath: status.hostIP
-    - name: OTEL_EXPORTER_JAEGER_ENDPOINT
-      value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
-    - name: OTEL_TRACES_EXPORTER
-      value: jaeger-thrift-splunk
-    - name: OTEL_PROPAGATORS
-      value: b3multi
-#   - name: OTEL_EXPORTER_OTLP_ENDPOINT
-#     value: http://$(SPLUNK_OTEL_AGENT):4317
     - name: OTEL_RESOURCE_ATTRIBUTES
       value: deployment.environment=apm-workshop
     - name: OTEL_SERVICE_NAME
       value: client-py-otel-k8s
+    - name: SPLUNK_OTEL_AGENT
+      valueFrom:
+        fieldRef:
+          fieldPath: status.hostIP
+ #  - name: OTEL_EXPORTER_JAEGER_ENDPOINT
+ #    value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
+ #  - name: OTEL_TRACES_EXPORTER
+ #    value: jaeger-thrift-splunk
+ #  - name: OTEL_PROPAGATORS
+ #    value: b3multi
+    - name: OTEL_EXPORTER_OTLP_ENDPOINT
+      value: http://$(SPLUNK_OTEL_AGENT):4317
     command: ["/bin/sh"]
     args: ["run-client.sh"]
