--- a/apm/k8s/python/tools/autogen/py-autogen.yaml
+++ b/apm/k8s/python/tools/autogen/py-autogen.yaml
@@ -21,14 +21,8 @@ spec:
       value: deployment.environment=otel-demo
     - name: OTEL_SERVICE_NAME
       value: python-autogen-otel
-    - name: OTEL_EXPORTER_JAEGER_ENDPOINT
-      value: http://$(SPLUNK_OTEL_AGENT):9080/v1/trace
-    - name: OTEL_TRACES_EXPORTER
-      value: jaeger-thrift-splunk
-    - name: OTEL_PROPAGATORS
-      value: b3multi
-#   - name: OTEL_EXPORTER_OTLP_ENDPOINT
-#     value: http://$(SPLUNK_OTEL_AGENT):4317
+    - name: OTEL_EXPORTER_OTLP_ENDPOINT
+      value: http://$(SPLUNK_OTEL_AGENT):4317
     command: ["/bin/sh"]
     args: ["run-autogen.sh"]
 ---
