--- a/apm/k8s/python/tools/py-deployment-sa.yaml
+++ b/apm/k8s/python/tools/py-deployment-sa.yaml
@@ -3,18 +3,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: server-flask-otrace-k8s
+  name: server-flask-otel-k8s
 spec:
   selector:
     matchLabels:
-      name: server-flask-otrace-k8s
+      name: server-flask-otel-k8s
   template:
     metadata:
       labels:
-        name: server-flask-otrace-k8s
+        name: server-flask-otel-k8s
     spec:
       containers:
-      - name: server-flask-otrace-k8s
+      - name: server-flask-otel-k8s
         image: docker.io/stevelsplunk/splk-python
         ports:
           - name: http
@@ -23,7 +23,7 @@ spec:
         - name: OTEL_RESOURCE_ATTRIBUTES
           value: deployment.environment=apm-workshop
         - name: OTEL_SERVICE_NAME
-          value: server-flask-otrace-k8s
+          value: server-flask-otel-k8s
         - name: SPLUNK_OTEL_AGENT
           valueFrom:
             fieldRef:
@@ -39,10 +39,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: server-flask-otrace-k8s
+  name: server-flask-otel-k8s
 spec:
   selector:
-    name: server-flask-otrace-k8s
+    name: server-flask-otel-k8s
   ports:
   - protocol: TCP
     port: 5000
