--- a/apm/k8s/python/dockerfile-splk-otel-python
+++ b/apm/k8s/python/dockerfile-splk-otel-python
@@ -3,6 +3,10 @@ RUN mkdir /home/code
 WORKDIR /home/code
 COPY . /home/code/
 RUN apt-get update && \
+    apt install -y curl && \
+    apt install -y dnsutils && \
+    apt install -y util-linux && \
+    apt install -y coreutils && \
     export PATH="$HOME/.local/bin:$PATH" && \
     apt install -y python3-pip && \
     python3 -m pip install -r requirements.txt && \
