--- a/apm/k8s/istio/istio-flask-gateway.yaml
+++ b/apm/k8s/istio/istio-flask-gateway.yaml
@@ -11,4 +11,23 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - "flask-server.com"
+    - "*"
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: flask-service
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - flask-gateway
+  http:
+  - match:
+    - uri:
+        exact: /echo
+    route:
+    - destination:
+        host: flask-server 
+        port:
+          number: 5000
