--- a/apm/k8s/java-deployment2.yaml
+++ b/apm/k8s/java-deployment2.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: client-java-otel-k8s
+  name: client2-java-otel-k8s
 spec:
   containers:
-  - name: client-java-otel-k8s
+  - name: client2-java-otel-k8s
     image: docker.io/stevelsplunk/splk-java
     env:
     - name: SPLUNK_OTEL_AGENT
@@ -13,7 +13,7 @@ spec:
         fieldRef:
           fieldPath: status.hostIP
     - name: OTEL_RESOURCE_ATTRIBUTES
-      value: service.name=client-java-otel-k8s,deployment.environment=apm-workshop
+      value: service.name=client2-java-otel-k8s,deployment.environment=apm-workshop
     - name: SPLUNK_METRICS_ENABLED
       value: "true"
     - name: SPLUNK_METRICS_ENDPOINT
