--- a/apm/k8s/istio/flask-deployment-istio.yaml
+++ b/apm/k8s/istio/flask-deployment-istio.yaml
@@ -49,6 +49,40 @@ spec:
     port: 5000
     targetPort: 5000
     nodePort: 30001
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: flask-gateway
+spec:
+  selector:
+    istio: ingressgateway # use Istio default gateway implementation
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: flask-service
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - flask-gateway
+  http:
+  - match:
+    - uri:
+        exact: /echo
+    route:
+    - destination:
+        host: server-flask-otel-k8s
+        port:
+          number: 5000
 # ---
 # ### Python Requests Pod
 # apiVersion: v1
