--- a/apm/k8s/collectorconfig/otel-redis.yaml
+++ b/apm/k8s/collectorconfig/otel-redis.yaml
@@ -16,4 +16,5 @@ otelAgent:
             - hostmetrics
             - kubeletstats
             - receiver_creator
+            - signalfx
             - smartagent/redis
