--- a/apm/misc/dotnet/myApp.csproj
+++ b/apm/misc/dotnet/myApp.csproj
@@ -1,12 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-	  <PackageReference Include="OpenTracing" Version="0.12.1" />
-  </ItemGroup>
-
 
 </Project>
