--- a/apm/k8s/istio/flask-deployment-istio.yaml
+++ b/apm/k8s/istio/flask-deployment-istio.yaml
@@ -52,6 +52,7 @@ spec:
     targetPort: 5000
     nodePort: 30001
 ---
+### Istio Gateway
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
@@ -67,6 +68,7 @@ spec:
     hosts:
     - "*"
 ---
+### Istio Virtual Service
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
