--- a/apm/k8s/istio/tracing.yaml
+++ b/apm/k8s/istio/tracing.yaml
@@ -11,8 +11,7 @@ spec:
         max_path_tag_length: 99999
         sampling: 100
         zipkin:
-          address: $(INGRESS_HOST):9411
-          # address: $(HOST_IP):9411
+          address: $(HOST_IP):9411
         custom_tags:
           # Optional, but recommended
           #environment.deployment:
