--- a/apm/k8s/dotnet/dotnet-deployment.yaml
+++ b/apm/k8s/dotnet/dotnet-deployment.yaml
@@ -34,4 +34,4 @@ spec:
     - name: SIGNALFX_DOTNET_TRACER_HOME
       value: /opt/signalfx-dotnet-tracing
     command: ["/bin/sh"]
-    args: ["run-client.sh"]
+    args: ["/App/run-client.sh"]
