--- a/apm/misc/dotnet-2.1/dotnet-2.1-deployment.yaml
+++ b/apm/misc/dotnet-2.1/dotnet-2.1-deployment.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: client-dotnet2-k8s
+  name: client-dotnet2d1-k8s
 spec:
   containers:
-  - name: client-dotnet2-k8s
+  - name: client-dotnet2d1-k8s
     image: docker.io/stevelsplunk/splk-dotnet-2.1
     env:
     - name: SPLUNK_OTEL_AGENT
@@ -14,7 +14,7 @@ spec:
         fieldRef:
           fieldPath: status.hostIP
     - name: SIGNALFX_SERVICE_NAME
-      value: 'dotnet-httpget'
+      value: 'dotnet2.1-httpget'
     - name: SIGNALFX_ENDPOINT_URL
       value: "http://$(SPLUNK_OTEL_AGENT):9411/api/v2/spans"
     - name: SIGNALFX_TRACE_GLOBAL_TAGS
